--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "cloudinary": "^1.40.0",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.7.10",
