feat: Implement Draft Trails and File Uploads API with MySQL and S3 integration
- Add MySQL connection pool and database initialization script
- Create handlers for draft trails management (CRUD operations)
- Implement file upload handlers for images and videos to S3
- Add cleanup handler for expired drafts
- Introduce authentication middleware for token validation
- Develop services for draft trails and file management
- Create a router to handle API requests and responses
- Add standardized HTTP response utilities
- Include Postman collection for API testing

--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
-CLOUDINARY_CLOUD_NAME=diyahdnjj
-CLOUDINARY_API_KEY=493586845188211
-CLOUDINARY_API_SECRET=B5C0rihc7YRAAilTv_drn5BhwPg
-PORT=3001
+AWS_REGION=us-east-1
+AWS_ACCOUNT_ID=123456789012
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=root
+DB_NAME=yesterday_stories
+S3_BUCKET=yesterday-stories-uploads-dev
+STAGE=dev
+NODE_ENV=development
