--- a/package.json
+++ b/package.json
@@ -1,29 +1,45 @@
 {
-  "name": "yesterday-stories-server",
-  "version": "1.0.0",
-  "description": "Yesterday Stories - Draft Trails & Image Upload Server",
-  "main": "index.js",
+  "name": "yesterday-stories-serverless",
+  "version": "2.0.0",
+  "description": "Yesterday Stories - Serverless Draft Trails & File Upload API with MySQL",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "serverless offline start",
+    "dev": "serverless offline start --httpPort 3001",
+    "deploy": "serverless deploy",
+    "deploy:prod": "serverless deploy --stage prod",
+    "deploy:dev": "serverless deploy --stage dev",
+    "remove": "serverless remove",
+    "invoke": "serverless invoke local",
+    "logs": "serverless logs -f main",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch"
   },
   "keywords": [
-    "api",
+    "serverless",
+    "aws-lambda",
+    "api-gateway",
     "draft-trails",
-    "image-upload",
-    "payment-resume"
+    "file-upload",
+    "s3",
+    "mysql",
+    "rds"
   ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
-    "cloudinary": "^1.40.0",
+    "aws-sdk": "^2.1400.0",
+    "mysql2": "^3.6.0",
+    "uuid": "^9.0.0",
     "dotenv": "^16.3.1"
   },
   "devDependencies": {
-    "@flydotio/dockerfile": "^0.7.10",
-    "nodemon": "^3.1.11"
+    "serverless": "^3.34.0",
+    "serverless-offline": "^13.2.0",
+    "serverless-dotenv-plugin": "^4.0.2",
+    "jest": "^29.7.0"
+  },
+  "engines": {
+    "node": "18.x || 20.x"
   }
 }
